test: create a bio case test

--- a/src/app/name-bio/name-bio.component.html
+++ b/src/app/name-bio/name-bio.component.html
@@ -8,11 +8,21 @@
 	{{ user()?.login }}
 </a>
 
-<p class="text-sm text-gray-600 italic mb-4">{{ user()?.bio }}</p>
+<p data-testid="pBio-name-bio" class="text-sm text-gray-600 italic mb-4">
+	{{ user()?.bio }}
+</p>
 } @if (userService.readLoading() && !userService.readError()) {
-<p data-testid="pLoading-name-bio" class="text-lg font-semibold text-gray-800 block mb-2">Loading...</p>
+<p
+	data-testid="pLoading-name-bio"
+	class="text-lg font-semibold text-gray-800 block mb-2"
+>
+	Loading...
+</p>
 }@else if (userService.readError()) {
-<p data-testid="pError-name-bio" class="text-lg font-semibold text-red-600 italic block mb-2">
+<p
+	data-testid="pError-name-bio"
+	class="text-lg font-semibold text-red-600 italic block mb-2"
+>
 	{{ userService.readError() }}
 </p>
 }
